# ai-agent

./: .progress.md  Dockerfile  PHASE_WORKFLOW.md  README.md  SKILL.md  design.md  docker-compose.yml  proposal.md  pyproject.toml  requirements.txt  spec.md  tasks.md
config/: config.yaml
phase-2-llm/: .openspec.yaml  .progress.md  design.md  spec.md  tasks.md
phases/phase-1-foundation/: .openspec.yaml  .progress.md  design.md  spec.md  tasks.md
phases/phase-2-llm/: tasks.md
specs/architecture/: spec.md
specs/core/: spec.md
src/: __init__.py
src/llm/: __init__.py
src/planner/: __init__.py
src/reflection/: __init__.py
