[project]
name = "ai-agent"
version = "0.1.0"
description = "Modern AI Agent with OODA-Loop architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python>=3.11",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
